manifests/argocd/overlays/prd/patches.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
        # configmap.reloader.stakater.com/reload: "argocd-rbac-cm,argocd-cm,argocd-cmd-params-cm"
---
apiVersion:  apps/v1
kind: StatefulSet
metadata:
  namespace: argocd
  name: argocd-application-controller
spec:
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
#        configmap.reloader.stakater.com/reload: "argocd-rbac-cm,argocd-cm,argocd-cmd-params-cm"
---
