manifests/argocd/overlays/prd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: internal-alb
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  # Configures the IngressClass to use EKS Auto Mode
  controller: eks.amazonaws.com/alb
  parameters:
    apiGroup: eks.amazonaws.com
    kind: IngressClassParams
    name: internal-class
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: argocd-server-ingress
#  annotations:
#    ingress.kubernetes.io/force-ssl-redirect: "true"
#    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
 ingressClassName: internal-alb
 rules:
 - host: "*.eu-west-1.elb.amazonaws.com"
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: argocd-server
           port:
             name: http
#  tls:
#  - hosts:
#    - argocd.azure.bnl-ms.myengie.com
#    secretName: argocd-server-tls
